# OCR-VLM-Embedding-Comprehensive-Testing

./: README.md  convert_images.py  docling_context.md  helpers.py  large.json  orig_repo_to_llm_context.sh  repo_to_llm_context_md.sh
llama3_2/: llama_test.py  ollama_base_blog.py  ollama_structured_outputs_test.py  pyproject.toml  tables_extraction.py
llama3_2/parsed_resumes/: 01_Ibrahim_LAHLOU_Curriculum_Vitae_DA__eng_ (1)_page_1.json  Alix_Lamotte_page_1.json  CV3_LAAMRI_ENG_HARD_page_1.json  CV_Abdelrahman_Mohamed_page_1.json  CV_Abdelrahman_Mohamed_page_2.json  CV_Agathe_Martin-Denavit-ENG_page_1.json  CV_Aissam_Debbache_HARD_page_1.json  CV_Aissam_Debbache_HARD_page_2.json  CV_Alex_Covin-ENG_page_1.json  CV_Amaury_Cyffers_HARD_page_1.json  CV_Ankerke_Janzakova_page_1.json  CV_Ankerke_Janzakova_page_2.json  CV_Ankerke_Janzakova_page_3.json  CV_CHADUTEAU-Tha_vL_page_1.json  CV_Carl_BOILLOT_page_1.json  CV_Charles_Sutty_page_1.json  CV_Eliette_Fritsch_HARD_page_1.json  CV_Elise_Suspne_page_1.json  CV_Elliot_Loiez_HARD_page_1.json  CV_Hugo_Bonnand_page_1.json  CV_Ikram_ElMoussaoui_page_1.json  CV_Ikram_ElMoussaoui_page_2.json  CV_LAAMRI_24DS_page_1.json  CV_LAAMRI_24G_page_1.json  CV_LAAMRI_24SC_page_1.json  CV_LAAMRI_F_page_1.json  CV_Lakshay_Gupta_page_1.json  CV_Le_hir_Emmanuel-ENG_page_1.json  CV_Logan_Marcellin-Dibon_page_1.json  CV_Margaux_Zuratas_page_1.json  CV_Margaux_Zuratas_page_2.json  CV_Mathys_Daviet_page_1.json  CV_Nizar_Tazi_HARD_page_1.json  CV_Noorhan_Sharawy_HARD_page_1.json  (+17 more)
paligemma896/: pali_gemma_896.py  pyproject.toml
(+470 files in other folders)
