[project]
name = "llama3-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.4.2",
    "pdf2image>=1.17.0",
    "pillow>=11.0.0",
    "pydantic[email]>=2.10.3",
    "pypdf2>=3.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
